# jackbox_megapicker_patcher

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
asar_bypass/: Cargo.toml
asar_bypass/src/: error.rs  lib.rs  main.rs  xrefs.rs
jackbox_megapicker_patcher/: Cargo.toml
jackbox_megapicker_patcher/src/: error.rs  main.rs
